# Graphics_algorithms

./: README.md
GAMES101/Bezier_curve/: CMakeLists.txt  main.cpp
GAMES101/Path_tracing/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Material.hpp  Ray.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  main.cpp
GAMES101/Whitted_style_ray_tracing/: Light.hpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
GAMES101/rasterizer_a_triangle/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
GAMES101/texture/hm3/: CMakeLists.txt  Texture.hpp  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
GAMES101/texture/hm3_1/: main.cpp
GAMES101/z_buffer/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
